--- a/src/main/java/views/mesero/VMenuCreateComanda.form
+++ b/src/main/java/views/mesero/VMenuCreateComanda.form
@@ -35,12 +35,12 @@
                       <Component id="jLabel1" min="-2" pref="183" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="deskPaneReview" alignment="0" max="32767" attributes="0"/>
+                      <Component id="deskPaneComanda" alignment="0" max="32767" attributes="0"/>
                       <Component id="cbCategoria" alignment="0" pref="361" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="deskPaneComanda" max="32767" attributes="0"/>
+              <Component id="deskPaneReview" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -57,10 +57,10 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="cbCategoria" min="-2" pref="35" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="deskPaneReview" min="-2" max="-2" attributes="0"/>
+              <Component id="deskPaneComanda" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
-          <Component id="deskPaneComanda" alignment="0" max="32767" attributes="0"/>
+          <Component id="deskPaneReview" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -107,7 +107,7 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Container class="javax.swing.JDesktopPane" name="deskPaneReview">
+    <Container class="javax.swing.JDesktopPane" name="deskPaneComanda">
 
       <Layout>
         <DimensionLayout dim="0">
@@ -122,7 +122,7 @@
         </DimensionLayout>
       </Layout>
     </Container>
-    <Container class="javax.swing.JDesktopPane" name="deskPaneComanda">
+    <Container class="javax.swing.JDesktopPane" name="deskPaneReview">
 
       <Layout>
         <DimensionLayout dim="0">
