--- a/src/main/java/views/mesero/VMesasComedor.form
+++ b/src/main/java/views/mesero/VMesasComedor.form
@@ -22,12 +22,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" min="-2" pref="786" max="-2" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="905" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" min="-2" pref="491" max="-2" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="614" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
